Use hgtools to create the manifest.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,7 @@
 [buildout]
 develop = .
 parts = py.test
+        release
 
 [py.test]
 recipe = z3c.recipe.scripts
@@ -11,3 +12,9 @@ script-initialization =
   if __name__ == '__main__': sys.exit(pytest.main())
 eggs = js.jquery_tools
        pytest
+
+[release]
+recipe = z3c.recipe.scripts
+eggs = zest.releaser
+       js.jquery_tools
+       hgtools
